--- a/style.css
+++ b/style.css
@@ -10,35 +10,53 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    transition: all 0.3s ease-in-out;
+    overflow-x: hidden; /* Prevent horizontal scrolling */
 }
 
 #logo {
     display: block;
-    height: 100px;
+    height: 80px;
     width: 100%;
-    margin: 0 0 10px 0;
+    margin: 0 0 20px 0;
     object-fit: contain;
 }
 
 
 .container {
-    max-width: 800px;
-    padding: 2rem;
+    position: relative;
+    width: 130vh;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    transition: all 0.5s ease-in-out;
+    z-index: 1; /* Lower z-index than the sidebar */
+    margin-left: 20px; /* Add left margin to account for the sidebar width */
 }
+
+canvas {
+    width: calc(100% - 20px); /* Full width minus padding on both sides */
+    max-width: auto;
+    margin: 40px auto;
+    margin-bottom: 20px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
+    background-color: #fff;
+}
+
 
 h1 {
     color: #333;
-    font-size: 28px;
-    margin-bottom: 24px;
+    font-size: 1.5rem;
+    margin-bottom: 0px;
 }
 
 form {
     background-color: #fff;
+    width: 250px;
     padding: 32px;
     border-radius: 6px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
@@ -50,6 +68,13 @@ form {
     flex-direction: column;
     margin-bottom: 1em;
 }
+
+.form-group-top {
+    display: inline-block;
+    flex-direction: row;
+    margin: 0.5em;
+}
+
 
 label {
     font-size: 16px;
@@ -98,7 +123,7 @@ th, td {
 
 th {
     background-color: #f6f6f6;
-    font-size: 16px;
+    font-size: auto;
     color: #333;
     font-weight: bold;
 }
@@ -106,7 +131,7 @@ th {
 #investmentResults table {
     background-color: #fff;
     border-collapse: collapse;
-    margin: 0 auto;
+    margin: 20px auto;
     margin-bottom: 1em;
     border-radius: 6px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
@@ -120,7 +145,68 @@ th {
 
 #investmentResults th {
     background-color: #f6f6f6;
-    font-size: 16px;
+    font-size: auto;
     color: #333;
     font-weight: bold;
+}
+
+
+#inputForm.sidebar {
+    position: fixed;
+    height: 100vh;
+    width: 200px; 
+    overflow: auto;
+    background-color: #fff;
+    padding: 32px;
+    transition: transform 0.3s ease-in-out;
+    transform: translateX(-300px);
+    z-index: 2; 
+}
+
+#inputForm.sidebar.active {
+    transform: translateX(0);
+}
+.sidebar.active {
+    transform: translateX(0); /* Slide in when active */
+}
+
+.sidebar {
+    position: fixed;
+    height: 100vh;
+    width: 300px;
+    padding: 1em;
+    background-color: #fff;
+    overflow-y: auto; /* Allow vertical scrolling if content exceeds viewport height */
+    transition: all 0.3s ease-in-out;
+    z-index: 2; /* Lower z-index than the container */
+    transform: translateX(-100%); /* Start off the screen */
+}
+
+body.sidebar-active {
+    padding-left: 320px; /* Sidebar width (300px) + padding (20px) */
+    overflow-x: hidden; /* Prevent horizontal scrolling when sidebar is active */
+}
+
+body {
+    padding-left: 100px; /* add left padding to the body */
+    transition: padding-left 0.3s; /* animate the padding change */
+}
+
+body:not(.sidebar-active) {
+    padding-left: 0;
+}
+
+.fixed-sidebar {
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100vh;
+    width: 300px;
+    overflow: auto;
+    background-color: #fff;
+    padding: 32px;
+}
+
+.sidebar .button-container {
+    flex-direction: column;
 }
